--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-عقارات-الضاحية---dahieh-real-estate",
+  "name": "عقارات-الضاحية---dahieh-real-estate",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,9 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.3",
-    "react-router-dom": "^7.11.0",
-    "react": "^19.2.3"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-router-dom": "7.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
